--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn WebGL</title>
-</head>
-
-<body onload="main()">
-    <canvas id="myCanvas" width="900" height="900">
-        Your browser does not support WebGL application.
-    </canvas>
-    <script src="script.js"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/global.css" />
+    <title>Assignment 1 - Ishaq Adheltyo - Computer Graphics C</title>
+  </head>
+  <body>
+      <main>
+        <section class="animation-fadein">
+            <div class="mg-y-2-rem text-center">
+                <h1>Assignment 1 - Muhammad Subhan - 05111940000204 </h1>
+            </div>
+        </section>
+        <section class="mg-y-2-rem animation-fadein">
+            <div class="text-center">
+                <canvas id="myCanvas" height="800" width="800" style="border-radius:5%;">
+                    Warning : Your browser does not support WebGL yet.
+                  </canvas>
+            </div>
+          </section>
+      </main>
+  </body>
+  <script src="script.js"></script>
 </html>
