--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/global.css" />
-    <title>Assignment 1 - Ishaq Adheltyo - Computer Graphics C</title>
+    <title>Tugas Grafkom</title>
   </head>
   <body>
       <main>
