--- a/Tugas1/index.html
+++ b/Tugas1/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Lovely WebGL - 05111940000204</title>
+    <link rel="stylesheet" href="css/global.css" />
+    
   </head>
   <body>
-    <script src="three.min.js"></script>
       <main>
         <section class="animation-fadein">
             <div class="mg-y-2-rem text-center">
                 <h1>Assignment 1 - Muhammad Subhan - 05111940000204 </h1>
             </div>
-        </section>        
+        </section>
+        <section class="mg-y-2-rem animation-fadein">
+            <div class="text-center">
+                <canvas id="myCanvas" height="800" width="800" style="border-radius:5%;">
+                    Warning : Your browser does not support WebGL yet.
+                  </canvas>
             </div>
+          </section>
       </main>
   </body>
   <script src="script.js"></script>
