--- a/tugas2/index.html
+++ b/tugas2/index.html
@@ -17,5 +17,5 @@
             </div>
       </main>
   </body>
-  <script src="script.js"></script>
+  <script type="module"src="script.js"></script>
 </html>
